<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/progControls"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/jumpPrev"
                    android:text="@string/pptJumpPrev" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/jumpPage" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/jumpNext"
                    android:text="@string/pptJumpNext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/setPageSize"
                    android:text="@string/pptSetPageSize" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/jumpRow"
                    android:text="@string/pptJumpRow" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/progControls"
        android:gravity="center_horizontal">

        <com.bwat.pendant.prg.ProgramTable
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progView" />
    </ScrollView>
</RelativeLayout>