<?xml version="1.0" encoding="utf-8"?><!--this version used for phone-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Vehicle IP Address: "
                android:layout_marginLeft="50dp" />

            <MultiAutoCompleteTextView
                android:id="@+id/ipAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="IP Address" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectButton"
                android:layout_marginLeft="10dp"
                android:text="Connect" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/disconnectButton"
                android:layout_marginLeft="10dp"
                android:text="disconnect" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accessButton"
                android:layout_marginLeft="10dp"
                android:text="access code"
                android:layout_alignParentRight="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accesscode"
                android:hint="type the accesscode "
                android:textColorHint="#83cfec"
                android:layout_marginRight="50dp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectStatus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:text="@string/status_start"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_weight="2.5"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal|center_vertical">


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.5" />


        <!-- Control button-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:id="@+id/tv_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="angle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:id="@+id/tv_offset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_alignParentRight="true"
                    android:text="speed"
                    android:layout_weight="2.41" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/R1">

                <com.bwat.pendant.bugstick.Joystick
                    android:id="@+id/joystick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:background="@drawable/bg_base"
                    app:start_on_first_touch="true"
                    app:force_square="true"
                    app:motion_constraint="None"

                    >

                    <Button
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/bg_stick" />
                </com.bwat.pendant.bugstick.Joystick>
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.53"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="Latest Response"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_time"
                android:id="@+id/responseTimeText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_message"
                android:id="@+id/responseMessageText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />


    </LinearLayout>


</LinearLayout>